@@ -105,7 +105,6 @@
     <Compile Include="Commands\CmdHigh5.cs" />
     <Compile Include="Commands\CmdIgnore.cs" />
     <Compile Include="Commands\CmdImpersonate.cs" />
-    <Compile Include="Commands\CmdInfection.cs" />
     <Compile Include="Commands\CmdKickAll.cs" />
     <Compile Include="Commands\CmdLockdown.cs" />
     <Compile Include="Commands\CmdLoginMessage.cs" />
