@@ -5,6 +5,7 @@ v5.0.0.0
 - Added a Chat Tab to the GUI. 
 - Removed the Custom Login and Logout windows (Now editable from the Players tab).
 - Added Plugin API.
+- Added VisualBasic Scripting (Custom Commands)
 - Now Supports WOM texturing.
 - Added /waypoint - creates waypoints on a map that you can move from, useful for building.
 - Added /topten - Lists top ten players in several catagories. Requires MySQL.
